--- a/css/common.css
+++ b/css/common.css
@@ -12,3 +12,22 @@ body {
   color: #212121;
   line-height: 1.5;
 }
+/* task2 */
+.gallery {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+  list-style: none;
+  padding: 0;
+}
+
+.gallery-item {
+  flex: 1 1 calc(33.333% - 20px);
+  box-sizing: border-box;
+}
+
+.gallery-item img {
+  width: 100%;
+  height: auto;
+  display: block;
+}
