--- a/css/common.css
+++ b/css/common.css
@@ -1,7 +1,16 @@
 * {
   box-sizing: border-box;
 }
+h1, h2 {
+  margin: 0px;
 
+}
+ul,
+ol {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
 body {
   margin: 16px;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
@@ -12,17 +21,56 @@ body {
   color: #212121;
   line-height: 1.5;
 }
+/* task1 */
+.list-container{
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  margin-left: auto;
+  margin-right: auto;
+
+}
+.item {
+
+background-color: #f6f6fe;
+max-width: 440px;
+padding: 16px;
+margin-bottom: 24px;
+
+}
+.list-container>ul>li>ul {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+  width: 392px;
+
+}
+
+.list-container>ul>li>ul>li {
+  border: 1px solid #808080;
+  border-radius: 4px;
+  width: 360px;
+  height: 40px;
+  padding-top: 8px;
+  padding-bottom: 8px;
+  padding-left: 16px;
+}
 /* task2 */
 .gallery {
   display: flex;
   flex-wrap: wrap;
-  gap: 10px;
+  gap: 24px;
   list-style: none;
   padding: 0;
+  margin-bottom: 100px;
+  margin-top: 100px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .gallery-item {
-  flex: 1 1 calc(33.333% - 20px);
+  flex: 1 1 calc(33.333% - 48px);
   box-sizing: border-box;
 }
 
