--- a/css/common.css
+++ b/css/common.css
@@ -79,3 +79,135 @@ margin-bottom: 24px;
   height: auto;
   display: block;
 }
+
+/* task3 */
+.window{
+  border-radius: 8px;
+  padding: 24px;
+  width: 408px;
+  height: 136px;
+  background-color: #fff;
+}
+.js-name-input{
+  width: 360px;
+  height: 40px;
+  padding-left: 16px;
+  margin-bottom: 16px;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #2e2f42;
+}
+.welcome-box{
+  font-weight: 600;
+    font-size: 24px;
+    line-height: 1.33333;
+    letter-spacing: 0.04em;
+    color: #2e2f42;
+
+}
+
+/* task4 */
+.login-form{
+  border-radius: 8px;
+    padding: 24px;
+    width: 408px;
+    background-color: #ffff;
+    display: flex;
+    align-items: flex-start;
+      justify-content: flex-start;
+    flex-direction: column;
+    gap: 16px;
+    font-weight: 400;
+      font-size: 16px;
+      line-height: 1.5;
+      letter-spacing: 0.04em;
+      color: #2e2f42;
+}
+.btn-submit{
+  border-radius: 8px;
+    padding: 8px 16px;
+    width: 86px;
+    height: 40px;
+    background-color: #4e75ff;
+    border: none;
+    font-weight: 500;
+      font-size: 16px;
+      line-height: 1.5;
+      letter-spacing: 0.04em;
+      color: #fff;
+}
+.input-aria{
+  width: 360px;
+  height: 36px;
+}
+/* task5 */
+.widget{
+  position: relative;
+  width: 345px;
+  height: 280px;
+  border-radius: 8px;
+}
+.widget-content{
+position: absolute;
+top: 50%;
+left: 50%;
+transform: translate(-50%, -50%);
+}
+.btn-change-color{
+  border-radius: 8px;
+    padding: 8px 16px;
+    width: 148px;
+    height: 40px;
+    background-color: #4e75ff;
+    border: none;
+    color:#fff;
+}
+
+/* task6 */
+.colors-container{
+  padding: 24px;
+  width: 534px;
+  display: flex;
+  align-items: flex-start;
+    justify-content: flex-start;
+    flex-direction: column;
+    gap: 16px;
+    background-color: #fff;
+}
+.controls-container{
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+  flex-direction: row;
+  gap: 16px;
+  padding: 32px;
+  background-color: #f6f6fe;
+  border-radius: 8px;
+}
+.input-controls{
+  border: 1px solid #808080;
+  border-radius: 8px;
+  text-align: center;
+  padding: 8px ;
+  width: 150px;
+  height: 40px;
+}
+.btn-colors{
+  border-radius: 8px;
+  padding: 8px 16px;
+  width: 120px;
+  height: 40px;
+  border: none;
+  color: #fff;
+  background-color: #4e75ff;
+}
+.red-btn-colors{
+  background-color: #ff4e4e;;
+}
+.boxes-container{
+  flex-wrap: wrap;
+  width: 486px;
+  gap: 44px;
+}
